@@ -136,6 +136,22 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|FastInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|request
 operator|.
 name|SolrQueryRequest
@@ -197,6 +213,16 @@ operator|.
 name|processor
 operator|.
 name|UpdateRequestProcessor
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|EOFException
 import|;
 end_import
 
@@ -353,20 +379,15 @@ name|update
 init|=
 literal|null
 decl_stmt|;
-name|update
-operator|=
-operator|new
 name|JavaBinUpdateRequestCodec
-argument_list|()
 operator|.
-name|unmarshal
-argument_list|(
-name|stream
-argument_list|,
+name|StreamingUpdateHandler
+name|handler
+init|=
 operator|new
 name|JavaBinUpdateRequestCodec
 operator|.
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 argument_list|()
 block|{
 specifier|private
@@ -377,7 +398,7 @@ literal|null
 decl_stmt|;
 specifier|public
 name|void
-name|document
+name|update
 parameter_list|(
 name|SolrInputDocument
 name|document
@@ -386,6 +407,71 @@ name|UpdateRequest
 name|updateRequest
 parameter_list|)
 block|{
+if|if
+condition|(
+name|document
+operator|==
+literal|null
+condition|)
+block|{
+comment|// Perhaps commit from the parameters
+try|try
+block|{
+name|RequestHandlerUtils
+operator|.
+name|handleCommit
+argument_list|(
+name|req
+argument_list|,
+name|processor
+argument_list|,
+name|updateRequest
+operator|.
+name|getParams
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|RequestHandlerUtils
+operator|.
+name|handleRollback
+argument_list|(
+name|req
+argument_list|,
+name|processor
+argument_list|,
+name|updateRequest
+operator|.
+name|getParams
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"ERROR handling commit/rollback"
+argument_list|)
+throw|;
+block|}
+return|return;
+block|}
 if|if
 condition|(
 name|addCmd
@@ -451,8 +537,65 @@ throw|;
 block|}
 block|}
 block|}
+decl_stmt|;
+name|FastInputStream
+name|in
+init|=
+name|FastInputStream
+operator|.
+name|wrap
+argument_list|(
+name|stream
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+init|;
+condition|;
+control|)
+block|{
+try|try
+block|{
+name|update
+operator|=
+operator|new
+name|JavaBinUpdateRequestCodec
+argument_list|()
+operator|.
+name|unmarshal
+argument_list|(
+name|in
+argument_list|,
+name|handler
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|EOFException
+name|e
+parameter_list|)
+block|{
+break|break;
+comment|// this is expected
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"Exception while processing update request"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+break|break;
+block|}
 if|if
 condition|(
 name|update
@@ -502,6 +645,7 @@ argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|getAddCommand
