@@ -44,20 +44,6 @@ name|solr
 operator|.
 name|common
 operator|.
-name|SolrInputField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
 name|params
 operator|.
 name|ModifiableSolrParams
@@ -342,7 +328,7 @@ name|os
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Reads a NamedList from the given InputStream, converts it into a SolrInputDocument and passes it to the given    * StreamingDocumentHandler    *    * @param is      the InputStream from which to read    * @param handler an instance of StreamingDocumentHandler to which SolrInputDocuments are streamed one by one    *    * @return the UpdateRequest    *    * @throws IOException in case of an exception while reading from the input stream or unmarshalling    */
+comment|/**    * Reads a NamedList from the given InputStream, converts it into a SolrInputDocument and passes it to the given    * StreamingUpdateHandler    *    * @param is      the InputStream from which to read    * @param handler an instance of StreamingUpdateHandler to which SolrInputDocuments are streamed one by one    *    * @return the UpdateRequest    *    * @throws IOException in case of an exception while reading from the input stream or unmarshalling    */
 DECL|method|unmarshal
 specifier|public
 name|UpdateRequest
@@ -352,7 +338,7 @@ name|InputStream
 name|is
 parameter_list|,
 specifier|final
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 name|handler
 parameter_list|)
 throws|throws
@@ -624,14 +610,86 @@ break|break;
 name|SolrInputDocument
 name|sdoc
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|o
+operator|instanceof
+name|List
+condition|)
+block|{
+name|sdoc
+operator|=
+name|listToSolrInputDocument
+argument_list|(
+operator|(
+name|List
+argument_list|<
+name|NamedList
+argument_list|>
+operator|)
+name|o
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|o
+operator|instanceof
+name|NamedList
+condition|)
+block|{
+name|UpdateRequest
+name|req
+init|=
+operator|new
+name|UpdateRequest
+argument_list|()
+decl_stmt|;
+name|req
+operator|.
+name|setParams
+argument_list|(
+operator|new
+name|ModifiableSolrParams
+argument_list|(
+name|SolrParams
+operator|.
+name|toSolrParams
+argument_list|(
+operator|(
+name|NamedList
+operator|)
+name|o
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|update
+argument_list|(
+literal|null
+argument_list|,
+name|req
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|sdoc
+operator|=
 operator|(
 name|SolrInputDocument
 operator|)
 name|o
-decl_stmt|;
+expr_stmt|;
+block|}
 name|handler
 operator|.
-name|document
+name|update
 argument_list|(
 name|sdoc
 argument_list|,
@@ -739,6 +797,32 @@ range|:
 name|doclist
 control|)
 block|{
+if|if
+condition|(
+name|o
+operator|instanceof
+name|List
+condition|)
+block|{
+name|solrInputDocs
+operator|.
+name|add
+argument_list|(
+name|listToSolrInputDocument
+argument_list|(
+operator|(
+name|List
+argument_list|<
+name|NamedList
+argument_list|>
+operator|)
+name|o
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|solrInputDocs
 operator|.
 name|add
@@ -749,6 +833,7 @@ operator|)
 name|o
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|updateRequest
 operator|.
@@ -808,6 +893,138 @@ block|}
 block|}
 return|return
 name|updateRequest
+return|;
+block|}
+DECL|method|listToSolrInputDocument
+specifier|private
+name|SolrInputDocument
+name|listToSolrInputDocument
+parameter_list|(
+name|List
+argument_list|<
+name|NamedList
+argument_list|>
+name|namedList
+parameter_list|)
+block|{
+name|SolrInputDocument
+name|doc
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|namedList
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|NamedList
+name|nl
+init|=
+name|namedList
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|i
+operator|==
+literal|0
+condition|)
+block|{
+name|doc
+operator|.
+name|setDocumentBoost
+argument_list|(
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|0
+argument_list|)
+operator|==
+literal|null
+condition|?
+literal|1.0f
+else|:
+operator|(
+name|Float
+operator|)
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|doc
+operator|.
+name|addField
+argument_list|(
+operator|(
+name|String
+operator|)
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|0
+argument_list|)
+argument_list|,
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|1
+argument_list|)
+argument_list|,
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|2
+argument_list|)
+operator|==
+literal|null
+condition|?
+literal|1.0f
+else|:
+operator|(
+name|Float
+operator|)
+name|nl
+operator|.
+name|getVal
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|doc
 return|;
 block|}
 DECL|method|solrParamsToNamedList
@@ -883,16 +1100,16 @@ return|return
 name|nl
 return|;
 block|}
-DECL|interface|StreamingDocumentHandler
+DECL|interface|StreamingUpdateHandler
 specifier|public
 specifier|static
 interface|interface
-name|StreamingDocumentHandler
+name|StreamingUpdateHandler
 block|{
-DECL|method|document
+DECL|method|update
 specifier|public
 name|void
-name|document
+name|update
 parameter_list|(
 name|SolrInputDocument
 name|document
